# Trading

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-finbert.txt  requirements.txt
configs/: default_config.yaml
docs/: ARCHITECTURE.md  ASSET_SELECTION_REVIEW.md  DATA_SOURCES.md  DISCLAIMER.md  FULL_UNIVERSE_PIPELINE.md  FUTURE_ROADMAP.md  GIT_AUTHORSHIP_FIX.md  OUTPUT_QUALITY_AUDIT.md  PRICE_COVERAGE_AUDIT.md  PROVIDER_RELIABILITY_AUDIT.md  RANKING_INTERPRETATION_AUDIT.md  SENTIMENT_MODELS.md  UNIVERSE_AUDIT.md
notebooks/: README.md
src/asset_selection/: __init__.py  config.py  criticality.py  logging_config.py  universe.py
src/asset_selection/allocation/: __init__.py
src/asset_selection/backtesting/: __init__.py
src/asset_selection/data_providers/: __init__.py  base.py  errors.py  fallback.py  fundamentals_provider.py  news_provider.py  prices_provider.py  stooq_provider.py  symbols.py  ticker_provider.py
src/asset_selection/fundamentals/: __init__.py  fundamental_scoring.py  growth_metrics.py  quality_metrics.py  valuation_metrics.py
src/asset_selection/health/: __init__.py  provider_health.py
src/asset_selection/pipelines/: run_asset_selection.py
src/asset_selection/risk/: __init__.py
src/asset_selection/scoring/: __init__.py  allocation_eligibility.py  composite_score.py  ranking.py
src/asset_selection/utils/: __init__.py  (+4 more)
tests/: conftest.py  test_allocation_eligibility.py  test_config.py  test_fundamentals.py  test_output_validation.py  test_pipeline_integration.py  test_price_coverage.py  test_provider_robustness.py  test_provider_status.py  test_ranking.py  test_risk_controls.py  test_scoring.py  test_sentiment.py  test_sentiment_finbert.py  test_sentiment_models.py  test_sentiment_pipeline.py  test_symbols.py  test_universe.py
(+8 files in other folders)
